argocd/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  annotations:
    gethomepage.dev/description: ArgoCD GitOps
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: sh-argo-cd.svg
    gethomepage.dev/name: ArgoCD
    gethomepage.dev/pod-selector: app.kubernetes.io/name=argocd-server
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - 'argo.jef.app'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
          group: ''
          kind: Service
          weight: 1
